[package]
name = "anchor-client"
version = "0.22.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust client for Anchor programs"

[features]
debug = []

[dependencies]
safe-anchor-lang = { path = "../lang", version = "0.22.0" }
anyhow = "1.0.32"
regex = "1.4.5"
serde = { version = "1.0.122", features = ["derive"] }
safecoin-client = "1.8.12"
safecoin-sdk = "1.8.12"
safecoin-account-decoder = "1.8.12"
thiserror = "1.0.20"
url = "2.2.2"
