[package]
name = "safe-safe-anchor-spl"
version = "0.22.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]
edition = "2018"
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[features]
default = ["mint", "token", "associated_token"]
mint = []
token = ["safe-token"]
associated_token = ["safe-associated-token-account"]
governance = []
shmem = []
devnet = []
dex = ["serum_dex"]

[dependencies]
safe-anchor-lang = { path = "../lang", version = "0.22.0", features = ["derive"] }
serum_dex = { git = "https://github.com/safely-project/safely-dex", rev = "1be91f2", version = "0.4.0", features = ["no-entrypoint"], optional = true }
safecoin-program = "1.8.12"
safe-token = { version = "3.2.2", features = ["no-entrypoint"], optional = true }
safe-associated-token-account = { version = "1.0.10", features = ["no-entrypoint"], optional = true }
