[package]
name = "escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
safe-anchor-lang = { path = "../../../../lang" }
safe-safe-anchor-spl = { path = "../../../../spl" }
safe-token = { version = "3.1.1", features = ["no-entrypoint"] }
