[package]
name = "lockup"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "lockup"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
anchor-deprecated-state = []
default = ["anchor-deprecated-state"]

[dependencies]
safe-anchor-lang = { path = "../../../../lang" }
safe-safe-anchor-spl = { path = "../../../../spl" }
