[package]
name = "sysvars"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sysvars"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
safe-anchor-lang = { path = "../../../../lang" }
safe-safe-anchor-spl = { path = "../../../../spl" }
