[package]
name = "token-proxy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_proxy"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
safe-anchor-lang = { path = "../../../../../lang" }
safe-safe-anchor-spl = { path = "../../../../../spl" }
safe-token = { version = "3.1.1", features = ["no-entrypoint"] }
